// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB dXUACw"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB dXUACw"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB dXUACw"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-FhnSQ cxUpsV sc-srrxr iZehMn"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cwcSVF cYkaUR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB dXUACw"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      hey
       
      <span
        class="sc-FhnSQ cxUpsV sc-srrxr iZehMn"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cwcSVF cYkaUR"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-FhnSQ cxUpsV sc-srrxr iZehMn"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cwcSVF cYkaUR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB dXUACw"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      hey
       
      <span
        class="sc-FhnSQ cxUpsV sc-srrxr iZehMn"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cwcSVF cYkaUR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB dXUACw"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      <span
        class="sc-FhnSQ cxUpsV sc-srrxr iZehMn"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cwcSVF cYkaUR"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB dXUACw"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-FhnSQ cxUpsV sc-srrxr iZehMn"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cwcSVF cYkaUR"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-byTJDB cfnoYT"
    role="document"
  >
    <div
      class="sc-hrphqP fLwknA sc-hlwFUH kONTBa"
      tabindex="0"
    >
      <span
        class="sc-kXtNZI GrJeJ"
      >
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-fuBaRS fgYafr"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-FhnSQ cxUpsV sc-dXqqap ecKIjd"
    >
      <span
        aria-label="Username loading…"
        class="sc-cwcSVF cYkaUR"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-fuBaRS fgYafr"
    >
      : 
    </i>
    <span
      class="sc-ijfqWo jhGXpr"
    >
      Hey
       
      <span
        class="sc-FhnSQ cxUpsV sc-srrxr iZehMn"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-cwcSVF cYkaUR"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
